--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,44 @@
-version: '3.8'
-
 services:
   nginx:
     image: nginx:latest
-    container_name: nginx_server
+    container_name: spoodler_nginx
     ports:
       - "8080:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./app:/var/www/html
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./spoodler:/var/www/html # Could it be ./spoodler/ui instead?
     depends_on:
       - php
     networks:
-      - app-network
+      - spoodler_network
 
   php:
     build:
-      context: ./php
-    container_name: php_fpm
+      context: ./docker/php
+      dockerfile: Dockerfile
+    container_name: spoodler_php
     volumes:
-      - ./app:/var/www/html
+      - ./spoodler:/var/www/html
+    depends_on:
+      - db
     networks:
-      - app-network
+      - spoodler_network
 
-  mysql:
+  db:
     image: mysql:8.0
-    container_name: mysql_db
+    container_name: spoodler_db
     environment:
-      MYSQL_ROOT_PASSWORD: admin
-      MYSQL_DATABASE: squeaker_db
-      MYSQL_USER: eduardo
-      MYSQL_PASSWORD: eduardo
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./docker/db:/docker-entrypoint-initdb.d
+    ports:
+      - "3306:3306"
     networks:
-      - app-network
-
-volumes:
-  mysql_data:
+      - spoodler_network
 
 networks:
-  app-network:
+  spoodler_network:
     driver: bridge
