test: setup phpunit and gitignore

--- a/spoodler/composer.json
+++ b/spoodler/composer.json
@@ -5,12 +5,15 @@
     },
     "autoload": {
         "psr-4": {
-            "classes\\": "spoodler/classes/"
+            "classes\\": "classes/"
         }
     },
     "authors": [
         {
             "name": "eduardo"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
+    }
 }
