feat: add db connection and crud

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 spoodler/.env*
 spoodler/vendor
 spoodler/.phpunit.cache
+spoodler/test/unit/classes/HelloTest.php
+spoodler/classes/report/Hello.php
