feat: add error logging to db and info logging to file

--- a/spoodler/composer.json
+++ b/spoodler/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "eduardo/spoodler",
     "require": {
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "monolog/monolog": "^3.8"
     },
     "autoload": {
         "psr-4": {
