refactor: relocate endpoints in public folder

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html; # Default directory where nginx will look for files
-    index index.php index.html; # Defines default files to serve when a dir is requested
+    root /var/www/html/public; # Default directory where nginx will look for files
+    index index.php; # Defines default files to serve when a dir is requested
 
     location / {
         # $uri holds the request without http://localhost
@@ -11,14 +11,15 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # API Handling
+    location /api {
+        try_files $uri /index.php?$query_string;
+    }
+
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass spoodler_php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-
-    location ^~ /bootstrap/ {
-        deny all;
     }
 }
