feat: add tls/ssl self signed certificate

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,9 +1,19 @@
+# Redirect HTTP to HTTPS:
 server {
     listen 80;
+    server_name localhost;
+    return 301 https://$host:8443$request_uri;
+}
+
+server {
+    listen 443 ssl;
     server_name localhost;
 
     root /var/www/html/public; # Default directory where nginx will look for files
     index index.php; # Defines default files to serve when a dir is requested
+
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
 
     location / {
         # $uri holds the request without http://localhost
@@ -11,7 +21,6 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # API Handling
     location /api {
         try_files $uri /index.php?$query_string;
     }
