--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,11 @@ services:
     container_name: spoodler_nginx
     ports:
       - "8080:80"
+      - "8443:443"  # Expose HTTPS on port 8443
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./spoodler:/var/www/html # Could it be ./spoodler/ui instead?
+      - ./spoodler:/var/www/html
+      - ./docker/nginx/ssl:/etc/nginx/ssl  # Mount the SSL certificates
     depends_on:
       - php
     networks:
