--- a/spoodler/composer.json
+++ b/spoodler/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "vlucas/phpdotenv": "^5.5",
         "monolog/monolog": "^3.8",
-        "flightphp/core": "^3.13"
+        "flightphp/core": "^3.13",
+        "firebase/php-jwt": "^6.11"
     },
     "autoload": {
         "psr-4": {
