--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: docker/react/Dockerfile
-    container_name: spoodler_frontend
+    container_name: react
     volumes:
       - ./frontend:/app/spoodler-frontend
     ports:
@@ -12,7 +12,7 @@ services:
       - spoodler_network
   nginx:
     image: nginx:latest
-    container_name: spoodler_nginx
+    container_name: nginx
     ports:
       - "8080:80"
       - "8443:443"  # Expose HTTPS on port 8443
@@ -29,7 +29,7 @@ services:
     build:
       context: ./docker/php
       dockerfile: Dockerfile
-    container_name: spoodler_php
+    container_name: php
     volumes:
       - ./spoodler:/var/www/html
     depends_on:
@@ -39,7 +39,7 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: spoodler_db
+    container_name: db
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-admin}
       MYSQL_DATABASE: ${DB_NAME:-spoodler}
@@ -54,7 +54,7 @@ services:
       
   test_db:
     image: mysql:8.0
-    container_name: spoodler_test_db
+    container_name: test_db
     volumes:
       - ./docker/db:/docker-entrypoint-initdb.d
     environment:
