--- a/docker/react/Dockerfile
+++ b/docker/react/Dockerfile
@@ -2,6 +2,7 @@ FROM node:22.13.1-alpine
 
 WORKDIR /app/spoodler-frontend
 
+# Documentation about which port will be used. Not actually exposing anything
 EXPOSE 3443
 
 # Start the development server
